0.2.5   xx-xxx-2009
  o Add ports 7000 and 7001 to the list of ports excluded by the IRC
    category in the exit policy configuration tab. (Ticket #517)
  o Add a context menu for highlighted event items in the "Basic" message
    log view that allows the user to copy the selected item text to the
    clipboard.


0.2.4   07-Sep-2009
  o Split the message log into "Basic" and "Advanced" views. The
    "Advanced" view contains standard log messages from Tor, while the new
    experimental "Basic" view displays status events received from Tor.
    (Ticket #265)
  o Apply an application-global stylesheet on OS X that forces all tree
    widgets in Vidalia to use the 12pt font recommended by Apple's human
    interface guidelines.
  o Add an OSX_FORCE_32BIT CMake option that can be used to force a 32-bit
    build on Mac OS X versions that default to 64-bit builds (e.g., Snow
    Leopard), if only 32-bit versions of the Qt libraries are available.
  o Fix a bug introduced in 0.2.3 that prevented Vidalia from correctly
    responding to ADDRMAP events from Tor. The result was that users would
    sometimes see IP addresses in the connection list shown under the network
    map rather than hostnames.
  o Fix a bug in the default "bootstrap" vidalia.conf file included in the
    OS X drag-and-drop bundles that pointed to a non-existent Polipo
    configuration file, causing Polipo to fail on startup.


0.2.3   27-Aug-2009
  o Create the data directory before trying to copy over the default
    Vidalia configuration file from inside the application bundle on Mac 
    OS X. Affects only OS X drag-and-drop installer users without a
    previous Vidalia installation.
  o Change all Tor event handling to use Qt's signals and slots mechanism
    instead of custom QEvent subclasses.
  o Fix another bug that resulted in the "Who has used my bridge?" link
    initially being visible when the user clicks "Setup Relaying" from